test_suite/tests/ui/string/derive/from_xor_try_from.rs
use nutype::nutype;

#[nutype(derive(From, TryFrom))]
struct Text(String);

fn main() {}
